examples/positive/L4/typed_array_in_proc.ob
MODULE ArrayInProc;

TYPE MYARRAY = ARRAY 3 OF INTEGER;

VAR a: MYARRAY;

PROCEDURE FOO(VAR b: MYARRAY);
  BEGIN
    b[1] := 42
  END FOO;

BEGIN
  a[0] := 3;

END ArrayInProc.
