examples/negative/type_errors/L4/9_nominal_types.ob
MODULE NominalTyping;
  TYPE FOO = ARRAY 2 OF INTEGER;
       BAR = ARRAY 2 OF INTEGER;
  PROCEDURE One(VAR a: FOO);
    PROCEDURE Two(VAR b: BAR);
    BEGIN
    END Two;
  BEGIN
    Two(a);
  END One;
END NominalTyping.
